# blueyeti

./: LICENSE  configure.ac
android/: .classpath  .project  AndroidManifest.xml
android/res/layout/: main.xml
android/res/menu/: main.xml
android/res/values/: strings.xml
android/res/xml/: preferences.xml
android/src/uk/ac/uwl/blueyeti/: BluetoothHelper.java  Information.java  MainActivity.java  Preferences.java
android/src/uk/ac/uwl/blueyeti/parser/: Parser.java
android/src/uk/ac/uwl/blueyeti/service/: BluetoothService.java  IServiceInterface.aidl  Information.aidl  Information.java
src/: Makefile.am  blueyetilog.db  l2-client.c  l2-client.h  l2-server.c  log.c  log.h  main.c  message.xml  scan.c  scan.h
